Updated slack secret.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ node_js:
   - '6.1'
   - '5.11'
 notifications:
-  slack:
-    thenmusketeers: WlNBxZcGRtsY9SCkXxVxXjsD
+  slack: thenmusketeers:WlNBxZcGRtsY9SCkXxVxXjsD
