--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pollbot",
   "version": "0.0.2",
-  "description": "",
+  "description": "Pollbot provides tools for periodically performing a task.  It's intended for us with APIs and web pages.",
   "main": "pollbot.js",
   "directories": {
     "test": "test"
